tests/machine/x/st/fun_call.st
add := [:a :b | ^(a + b). ].
Transcript show: (add value: 2 value: 3) printString; cr.
